tests/snapshots/sfc/ts/patches__es6_shorthand_in_v_bind_object.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
assertion_line: 196
expression: ts_output
---
import { openBlock as _openBlock, createElementBlock as _createElementBlock, normalizeProps as _normalizeProps, guardReactiveProps as _guardReactiveProps } from "vue"
import { defineComponent as _defineComponent } from 'vue'
import { ref } from 'vue'


const __sfc__ = /*@__PURE__*/_defineComponent({
  __name: 'test',
  setup(__props, { expose: __expose, emit: __emit }) {
  __expose();
  const disabled = ref(false)
  const type = ref('button')
  const __returned__ = { disabled, ref, type }
  Object.defineProperty(__returned__, '__isScriptSetup', { enumerable: false, value: true })
  return __returned__
  }

});

export function render(_ctx, _cache, $props, $setup, $data, $options) {
  return (_openBlock(), _createElementBlock("button", _normalizeProps(_guardReactiveProps({ disabled: $setup.disabled, type: $setup.type })), "Click", 16 /* FULL_PROPS */))
}

__sfc__.render = render
export default __sfc__
