tests/snapshots/sfc/ts/patches__multiline_arrow_function_in_event_handler.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: ts_output
---
import { defineComponent } from 'vue'
import { openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue"

import { ref } from 'vue'

export default defineComponent({
  name: 'test',
  setup(__props) {

const count = ref(0)

return (_ctx, _cache) => {
  return (_openBlock(), _createElementBlock("button", { onClick: () => { const newValue = count.value + 1; count.value = _ctx.newValue; console.log('incremented'); } }, "Increment", 8 /* PROPS */, ["onClick"]))
}
}

})
