tests/snapshots/sfc/ts/patches__props_destructure_with_type_based_defineprops_and_defaults.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: ts_output
---
import { mergeDefaults as _mergeDefaults } from 'vue'
import { defineComponent, PropType } from 'vue'
import { openBlock as _openBlock, createElementBlock as _createElementBlock, normalizeClass as _normalizeClass } from "vue"


export default defineComponent({
  name: 'test',
  props: {
    color: { type: String as PropType<"primary" | "secondary">, required: false, default: "primary" },
    size: { type: String as PropType<"small" | "medium" | "large">, required: false, default: "medium" },
  },
  setup(__props) {


return (_ctx, _cache) => {
  return (_openBlock(), _createElementBlock("div", { class: _normalizeClass([__props.color, __props.size]) }, "Styled", 2 /* CLASS */))
}
}

})
